# AgIsoTerminalDesigner

./: Cargo.toml  build_release_copy_settings.bat  designer_settings.json
src/: editor_project.rs  lib.rs  main.rs  object_configuring.rs  object_defaults.rs  object_rendering.rs  project_file.rs  settings.rs
